@@ -2,6 +2,7 @@
 - First Github-based release
 - Cleaned up documentation for nBinomial1Sample
 - Updated documentation and code (including one default value for an argument) for nBinomial1Sample to improve error handling and clarity 
+- Updated sfLDOF to generalize with rho parameter; still backwards compatible for Lan-DeMets O'Brien-Fleming
 
 3.0-3 (not released)
 - Introduced spending time as a separate concept from information time to enable concepts such as calendar-based spending functions. The only user function changed is the gsDesign function and the change is the addition of the parameters usTime and lsTime; default behavior is backwards compatible.
